# FFI-C-Haskell

./: FFI-C-Haskell.cabal  README.md  default.nix
app/: Main.hs
cbits/: function.c  math.cpp
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
