cabal-version:      3.0
name:               FFI-C-Haskell
version:            0.1.0.0
synopsis:           Foreign Function Interface with C on haskell example
description:        demonstrate how to use FFI C programming in Haskell
homepage:           https://github.com/aerphanas/FFI-C-Haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Muhammad Aviv Burhanudin
maintainer:         muhamadaviv14@gmail.com
category:           Testing
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable FFI-C-Haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0,
                      process
    hs-source-dirs:   app
    default-language: Haskell2010
    --foreign-libraries: function
    c-sources:        cbits/function.c
    cxx-sources:      cbits/math.cpp
